added delete vehicle endpoint
